# smaaDemo

./: .gitignore  CMakeLists.txt  blit.frag  blit.vert  compile_commands.sh  cube.frag  cube.vert  fxaa.comp  fxaa.frag  fxaa.hlsl  fxaa.vert  fxaa3_11.h  gui.frag  gui.vert  image.frag  image.vert  license.txt  module.mk  readme.txt  separate.frag  shaderDefines.h  shaderUtils.h  shape.frag  shape.hlsl  shape.vert  simpleFS.frag  simpleVS.vert  smaa.h  smaaBlendWeight.comp  smaaBlendWeight.frag  smaaBlendWeight.hlsl  smaaBlendWeight.vert  smaaEdge.comp  smaaEdge.frag  smaaEdge.hlsl  smaaEdge.vert  smaaNeighbor.comp  smaaNeighbor.frag  smaaNeighbor.hlsl  smaaNeighbor.vert  (+5 more)
binaries/: example.mk
demo/: NullRenderer.cpp  NullRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h  RendererCommon.cpp  RendererInternal.h  Utils.cpp  Utils.h  VulkanMemoryAllocator.cpp  VulkanRenderer.cpp  VulkanRenderer.h  module.mk  par_shapes.cpp  smaaDemo.cpp
emscripten/: example.mk  smaaDemo.html
foreign/: module.mk  version.txt
foreign/SPIRV-Cross/: module.mk  vendor.lst  version.txt
foreign/SPIRV-Cross/shaders-hlsl/frag/: tex-sampling.frag
foreign/SPIRV-Headers/: vendor.lst  version.txt
foreign/SPIRV-Tools/: bad.frag  bad.frag.asm  bad.frag.spv  module.mk  ok.frag  ok.frag.asm  ok.frag.spv  vendor.lst  version.txt
foreign/SPIRV-Tools/include/: build-version.inc  core.insts-1.0.inc  core.insts-1.1.inc  core.insts-1.2.inc  core.insts-unified1.inc  enum_string_mapping.inc  extension_enum.inc  generators.inc  operand.kinds-1.0.inc  operand.kinds-1.1.inc  operand.kinds-1.2.inc  operand.kinds-unified1.inc
foreign/SPIRV-Tools/source/: module.mk
foreign/SPIRV-Tools/source/opt/: module.mk
foreign/SPIRV-Tools/source/util/: module.mk
foreign/SPIRV-Tools/source/val/: module.mk
foreign/better-enums/: version.txt
foreign/fmt/: module.mk  vendor.lst  version.txt
foreign/fmt/src/: module.mk
foreign/glew/: version.txt
foreign/glew/auto/: patterns
foreign/glew/auto/extensions/gl/: EGL_EXT_device_base  EGL_KHR_image_base  EGL_KHR_lock_surface3  GLX_ARB_fbconfig_float  GL_ARB_direct_state_access  GL_ARB_sync  GL_ARB_uniform_buffer_object  GL_SGIX_fog_texture
foreign/glew/auto/registry/: sync.sh
foreign/glew/auto/registry/egl/: index.html
foreign/glew/auto/registry/xml/: egl.xml
foreign/glew/doc/: glew.html
foreign/glew/include/GL/: eglew.h  glew.h  glxew.h
foreign/glew/src/: glew.c  glewinfo.c  module.mk
foreign/glm/: vendor.lst  version.txt
foreign/glm/glm/simd/: platform.h
foreign/glslang/: module.mk  vendor.lst  version.txt
foreign/glslang/OGLCompilersDLL/: module.mk
foreign/glslang/SPIRV/: module.mk
foreign/glslang/StandAlone/: module.mk
foreign/glslang/Test/: 320.tesc  320.tese  400.tese  440.vert  450.vert  constFold.frag  cppBad.vert  glspv.frag  glspv.vert  hlsl.boolConv.vert  hlsl.flattenOpaqueInit.vert  hlsl.function.frag  hlsl.pp.expand.frag  link1.vk.frag  link2.vk.frag  preprocessor.simple.vert  reflection.vert  spv.450.geom  spv.450.tesc  spv.accessChain.frag  spv.bufferhandle10.frag  spv.int16.frag  spv.int64.frag  spv.memoryScopeSemantics.comp  spv.noBuiltInLoc.vert  spv.shaderBallotAMD.comp  spv.shaderStencilExport.frag  spv.stereoViewRendering.tesc  spv.subgroupBallot.comp  spv.targetOpenGL.vert  spv.viewportArray2.tesc  vulkan.frag  vulkan.vert
foreign/glslang/glslang/: module.mk
foreign/glslang/glslang/GenericCodeGen/: module.mk
foreign/glslang/glslang/HLSL/: module.mk
foreign/glslang/glslang/MachineIndependent/: iomapper.cpp  module.mk
foreign/glslang/glslang/MachineIndependent/preprocessor/: module.mk
foreign/glslang/glslang/OSDependent/: module.mk
foreign/hedley/: vendor.lst  version.txt
foreign/hedley/test/: Makefile.dmc  Makefile.iar  Makefile.icl  Makefile.msvc  Makefile.pelles
foreign/imgui/: imconfig.h  module.mk  vendor.lst  version.txt
foreign/magic_enum/: .bazelignore  .bazelrc  MODULE.bazel  vendor.lst  version.txt
foreign/mingw-std-threads/: mingw.condition_variable.h  mingw.mutex.h  mingw.thread.h  vendor.lst  version.txt
foreign/mingw-std-threads/tests/: CMakeLists.txt  tests.cpp
foreign/mpark-variant/: vendor.lst  version.txt
foreign/nlohmann_json/: vendor.lst  version.txt
foreign/par/: version.txt
foreign/pcg-cpp/: vendor.lst  version.txt
foreign/pcg-cpp/include/: pcg_random.hpp
foreign/shaderc/: module.mk  version.txt
foreign/shaderc/libshaderc/: module.mk
foreign/shaderc/libshaderc/src/: module.mk
foreign/shaderc/libshaderc_util/src/: module.mk
foreign/spirv-tools/include/: core.insts-1.2.inc  extension_enum.inc  generators.inc  operand.kinds-1.0.inc  operand.kinds-1.1.inc
foreign/stb/: version.txt
foreign/string-view-lite/: vendor.lst  version.txt
foreign/tclap/: version.txt
foreign/tclap/include/tclap/: MultiArg.h  ValueArg.h
foreign/vulkanMemoryAllocator/: .travis.yml  CHANGELOG.md  vendor.lst  version.txt
foreign/vulkanMemoryAllocator/docs/: Recording file format.md
foreign/vulkanMemoryAllocator/docs/html/: struct_vma_virtual_block.html
foreign/vulkanMemoryAllocator/include/: vk_mem_alloc.h
foreign/vulkanMemoryAllocator/premake/: premake5.lua
foreign/vulkanMemoryAllocator/src/: Common.cpp  Common.h  SparseBindingTest.cpp  SparseBindingTest.h  Tests.cpp  VmaUsage.h  VulkanSample.cpp  vk_mem_alloc.h
foreign/vulkanMemoryAllocator/src/Shaders/: SparseBindingTest.comp
foreign/vulkanMemoryAllocator/src/VmaReplay/: Common.cpp  Common.h  Constants.cpp  Constants.h  VmaReplay.cpp  VmaUsage.cpp  VmaUsage.h
foreign/vulkanMemoryAllocator/tools/VmaDumpVis/: VmaDumpVis.py
foreign/xxHash/: module.mk  vendor.lst  version.txt
mingw/: Makefile  example.mk
renderer/: NullRenderer.cpp  NullRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderGraph.h  Renderer.h  RendererCommon.cpp  RendererInternal.h  VulkanMemoryAllocator.cpp  VulkanRenderer.cpp  VulkanRenderer.h  module.mk
utils/: Hash.h  Utils.cpp  Utils.h  module.mk
windows/: SMAADemo.sln  SMAADemo.vcxproj  SMAADemo.vcxproj.filters  build-foreign.bat
(+240 files in other folders)
